# libSTARK

./: .gitignore  CMakeLists.txt  README.md  args.txt  build.sh  build_emscripten.sh  cbase64.h  compile_flags.txt  datatest.py  lenar  lenar.cpp  link_flags.txt  myflags.txt
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  index.html
algebra/FFT/: CMakeLists.txt
algebra/FFT/src/: Element.cpp  Element.h  FFT.cpp  clmul.cpp
algebra/algebralib/: CMakeLists.txt
algebra/algebralib-tests/: CMakeLists.txt
algebra/algebralib/headers/algebraLib/: FieldElement.hpp
algebra/algebralib/src/: ErrorHandling.cpp  FieldElement.cpp  UnivariatePolynomialGeneral.cpp  novelFFT.cpp
dd_script/: Transaction_comp.txt  datatest.py  func.js  sran.txt  test.asm  test_db_script.py  test_script.py  test_transaction.js
libstark/: CMakeLists.txt
libstark-tests/: CMakeLists.txt
libstark/src/common/Algebra/: LinearSpace.cpp
libstark/src/protocols/: protocol.cpp  protocol.hpp  serialization_func.cpp
libstark/src/protocols/Ali/: prover.cpp  prover.hpp  verifier.cpp  verifier.hpp
libstark/src/protocols/Ali/common_details/: common.cpp  common.hpp  serialization_fun.cpp  serialization_fun.h
libstark/src/protocols/Fri/: prover.cpp
libstark/src/protocols/Fri/common/: common.cpp  common.hpp  deserialized_fun.cpp  deserialized_fun.h  serialize_funfunc.cpp  serialize_funfunc.hpp
libstark/src/protocols/common/: proofs.cpp
libstark/src/protocols/common/CryptoCommitment/: MerkleCommitment.cpp  MerkleCommitment.hpp  aes_functions.cpp
libstark/src/reductions/BairToAcsp/: BairToAcsp.cpp
onetest/: CMakeLists.txt  main.cpp
prevstarkdpm/: LOCI_AES160hashchain.hpp  LOCI_AES160hashchain__GenWitness.cpp  LOCI_AES160hashchain_constraints.cpp  LOCI_AES160hashchain_instance.cpp  LOCI_AES160hashchain_instance.hpp  LOCI_AES160hashchain_witness.cpp  row_constraints_parser_LOCI_AES160hashchain.py
simde/: CMakeLists.txt
simde/simde/x86/: sse2.h
starkdpm/: CMakeLists.txt
tinyram/gadgetlib/: CMakeLists.txt
tinyram/gadgetlib/gadgetlib/: infrastructure.cpp
tinyram/stark-tinyram/: CMakeLists.txt
tinyram/stark-tinyram-tests/: CMakeLists.txt
tinyram/stark-tinyram/src/: main.cpp
tinyram/stark-tinyram/src/TinyRAM/: TinyRAMInstance.cpp
tinyram/stark-tinyram/src/TinyRAMtoBair/RamToContraintSystem/: ALU.cpp
